--- a/circle.yml
+++ b/circle.yml
@@ -1,25 +1,58 @@
 version: 2
-
 jobs:
-  macos:
-    macos:
-      xcode: "9.2"
-    steps:
-      - checkout
-      - run: swift build
-      - run: swift test
   linux:
     docker:
-      - image: norionomura/swift:swift-4.1-branch
+      - image: codevapor/swift:4.1
+      - image: redis:3.2
+      - image: mysql:5.7
+        environment:
+          MYSQL_ALLOW_EMPTY_PASSWORD: true
+          MYSQL_DATABASE: test
+          MYSQL_USER: root
+          MYSQL_ROOT_PASSWORD: "password"
     steps:
-      - checkout
       - run: apt-get update
       - run: apt-get install -yq libssl-dev
-      - run: swift build
-      - run: swift test
+      - run: apt-get install -yq libmysqlclient-dev
+      - run: apt-get install -yq mysql-client
+      - run: sleep 5
+      - run: mysql -h 127.0.0.1 -ppassword -e "set global max_connections = 1000;"
+      - checkout
+      - restore_cache:
+          keys:
+            - v2-spm-deps-{{ checksum "Package.resolved" }}
+      - run:
+          name: Copy Resolved Package
+          command: cp Package.resolved res
+      - run:
+          name: Compile Code
+          no_output_timeout: 1800
+          command: |
+            swift build
+      - run:
+          name: Run unit tests
+          no_output_timeout: 1800
+          command: |
+            swift test
+      - run:
+          name: Restoring Resolved Package
+          command: mv res Package.resolved
+      - save_cache:
+          key: v2-spm-deps-{{ checksum "Package.resolved" }}
+          paths:
+            - .build
+  linux-release:
+    docker:
+      - image: codevapor/swift:4.1
+    steps:
+      - checkout
+      - run:
+          name: Compile code with optimizations
+          command: swift build -c release
+
 workflows:
   version: 2
   tests:
     jobs:
       - linux
-      # - macos
+      - linux-release
